force-app/main/default/objects/Contact/fields/MasterContact__c.field-meta.xml
<CustomField>
    <fullName>MasterContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master Contact record to which this Duplicate Contact should be merged.</description>
    <label>Master Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Duplicate Prospects</relationshipLabel>
    <relationshipName>MasterContact</relationshipName>
    <type>Lookup</type>
</CustomField>