force-app/main/default/objects/Contact/fields/MergeApproved__c.field-meta.xml
<CustomField>
    <fullName>MergeApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Merge of Prospect to Client record has been approved.</description>
    <label>Merge Approved</label>
    <type>Checkbox</type>
</CustomField>