force-app/main/default/objects/Contact/fields/TDA_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>TDA_Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>