force-app/main/default/objects/Contact/fields/TDA_ODS_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>TDA_ODS_Client_ID__c</fullName>
    <externalId>true</externalId>
    <label>ODS Client ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>