force-app/main/default/objects/Contact/recordTypes/Prospect.recordType-meta.xml
<RecordType>
    <fullName>Prospect</fullName>
    <active>true</active>
    <description>Prospects who have not yet purchased Products and established a business relationship</description>
    <label>Prospect</label>
</RecordType>