force-app/main/default/objects/Contact/validationRules/Prospect_Merge_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Prospect_Merge_Rule</fullName>
    <active>false</active>
    <description>Prospect Merge Rule requires that MasterContact is set before allowing MergeApproved to be set to true</description>
    <errorConditionFormula>NOT(ISBLANK( MasterContact__c ))
&amp;&amp;  ISPICKVAL(TDA_Contact_Type__c,&#39;Prospect&#39;)
&amp;&amp;   MergeApproved__c</errorConditionFormula>
    <errorMessage>Prospect Records must be linked to Master Contact (Client) before Merge Approved can be set to true.</errorMessage>
</ValidationRule>